--- a/src/Oxpecker.ViewEngine/Oxpecker.ViewEngine.fsproj
+++ b/src/Oxpecker.ViewEngine/Oxpecker.ViewEngine.fsproj
@@ -27,6 +27,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="9.0.0" />
         <PackageReference Update="FSharp.Core" Version="9.0.100"/>
+        <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="3.0.1" />
     </ItemGroup>
     <ItemGroup>
         <Compile Include="AssemblyInfo.fs" />
